# desktop

./: .gitignore  CODEOWNERS  README.md  libraries.txt  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.changeset/: afraid-shoes-move.md  clean-mugs-say.md  cruel-monkeys-draw.md  cute-deer-fall.md  cyan-peas-enter.md  eight-rivers-attend.md  forty-berries-relate.md  fruity-zoos-try.md  great-eyes-double.md  happy-plants-start.md  itchy-impalas-doubt.md  lazy-experts-fall.md  loud-memes-sleep.md  lucky-eyes-end.md  lucky-rules-walk.md  metal-spiders-trade.md  neat-impalas-judge.md  neat-trams-draw.md  nice-clubs-scream.md  nice-lemons-fall.md  pink-words-begin.md  serious-spoons-behave.md  slimy-spiders-doubt.md  solid-ants-type.md  sour-elephants-exist.md  thirty-sheep-begin.md  tidy-dingos-visit.md  violet-mammals-draw.md  wise-knives-sort.md  wise-readers-pay.md  witty-buttons-smell.md
.github/_workflows/: python_tests.yml  release.yml
.github/workflows/: js-sdk-tests.yml  js_sdk_tests.yml  publish_packages.yml  pull-request.yml  python-sdk-tests.yml  python_sdk_tests.yml  release.yml  template.yml
examples/basic-javascript/: index.js  package-lock.json  package.json
examples/basic-python/: main.py  pyproject.toml
examples/streaming-apps-javascript/: README.md
examples/streaming-apps-python/: README.md
python/: example.py  mux_python.py  package.json  pyproject.toml
python/e2b_desktop/: main.py  stream.py
python/e2b_desktop/tests/: test_controls.py
template/: Dockerfile  e2b.Dockerfile  e2b.toml  firefox.cfg  start-up.sh
